--- a/src/widgets/AppHeader/ui/app-header.scss
+++ b/src/widgets/AppHeader/ui/app-header.scss
@@ -55,3 +55,9 @@
     @include padding-horizontal($padding-hr-mobile);
   }
 }
+
+@media screen and (max-width: $mobile) {
+  .header__button {
+    display: none;
+  }
+}
